--- a/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
@@ -29,7 +29,7 @@
             <div class="col-md-1">
             <label class="m-checkbox">
                 <input type="checkbox" [(ngModel)]="articulo.selected" (change)="changeAllState()">
-                <span></span>
+                <i class="fa fa-ban" style="font-size: 10px !important;margin-top:10px;color:#ee1111;float: left;" title="Edición Bloqueada" *ngIf="articulo.editar"></i>
             </label>
             </div>
             <div class="col-md-3">
@@ -99,9 +99,9 @@
             <i class="fa fa-edit m--font-info" *ngIf="articulo.entrega && !articulo.guia_enviada " title="Editar Entrega" style="cursor: pointer;" (click)="View(editarModal,articulo.entrega.id,0)"></i>
             </div>
             <div class="col-md-1">
-            <i class="fa fa-eye m--font-info" *ngIf="articulo.entrega" title="Visualizar Entrega" style="cursor: pointer;" (click)="View(detallesModal,articulo.entrega.id,1)"></i>
+            <i class="fa fa-eye m--font-info" *ngIf="articulo.entrega && !articulo.editar" title="Visualizar Entrega" style="cursor: pointer;" (click)="View(detallesModal,articulo.entrega.id,1)"></i>
             </div>
-            <div class="col-md-1" *ngIf="articulo.entrega && !articulo.guia_enviada">
+            <div class="col-md-1" *ngIf="articulo.entrega && !articulo.guia_enviada && !articulo.editar">
                 <i class="fa fa-trash m--font-danger" title="Eliminar" style="cursor: pointer"
                    (click)="onDelete(deleteConfirmation,articulo.entrega.id)"></i>
             </div>
