--- a/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
@@ -29,7 +29,8 @@
             <div class="col-md-1">
             <label class="m-checkbox">
                 <input type="checkbox" [(ngModel)]="articulo.selected" (change)="changeAllState()">
-                <i class="fa fa-ban" style="font-size: 10px !important;margin-top:10px;color:#ee1111;float: left;" title="Edición Bloqueada" *ngIf="articulo.editar"></i>
+                <span></span>
+                <i class="fa fa-ban" style="margin-left: -8px;font-size: 10px !important;margin-top:10px;color:#ee1111;float: left;" title="Edición Bloqueada" *ngIf="articulo.editar"></i>
             </label>
             </div>
             <div class="col-md-3">
