--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -31,12 +31,12 @@
                 <input type="checkbox" [(ngModel)]="articulo.selected" (change)="changeAllState()">
                 <span></span>
             </label>
-            <i class="fa fa-dropbox" style="font-size: 10px" *ngIf="articulo.consolidado">{{articulo.codigoConsolidado}}</i>
+            <i class="fa fa-dropbox" style="font-size: 10px" *ngIf="articulo.consolidado">{{articulo.codigo_consolidado}}</i>
             <a style="cursor: pointer;"  *ngIf="articulo.enviar" title="Instrucciones de Embarque"  (click)="modalEmbarque(embarqueModal,articulo )"> <i class="fa fa-plane" style="font-size: 10px"></i></a>
            
         </td>
         <td>
-            {{articulo.fechaBodega | date: "dd/MM/y" : "-0400"}}
+            {{articulo.fecha_bodega | date: "dd/MM/y" : "-0400"}}
         </td>
         <td>
             {{articulo.trackbox}}
@@ -71,9 +71,9 @@
             (click)="guardarPrecio(articulo.id,articulo.precio)"  *ngIf="!articulo.editarprecio"></i>
         </td>
         <td>
-            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file" title="Declaración de Valores" style="color: white; background-color: #4f9e35"  *ngIf="articulo.factura_file && articulo.facDV && !articulo.consolidadoFactura">Si</a>            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura" style="color: white; background-color: #1e1111" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && !articulo.consolidadoFactura">Si</a>
-            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura Consolidada" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && articulo.consolidadoFactura">Si</a>            
-            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file" title="Factura Consolidada" style="color: white; background-color: #4660d1" *ngIf="articulo.factura_file && articulo.facDV && articulo.consolidadoFactura">Si</a>                  <input
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Declaración de Valores" style="color: white; background-color: #4f9e35"  *ngIf="articulo.factura_url && articulo.fac_d_v && !articulo.consolidado_factura">Si</a>            <a class="m-badge m-badge--info m-badge--wide" [attr.href]=" articulo.factura_url" title="Factura" style="color: white; background-color: #1e1111" target="_blank" *ngIf="articulo.factura_url && !articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Factura Consolidada" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_url && !articulo.fac_d_v && articulo.consolidado_factura">Si</a>            
+            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Factura Consolidada" style="color: white; background-color: #4660d1" *ngIf="articulo.factura_url && articulo.fac_d_v && articulo.consolidado_factura">Si</a>                  <input
                     name="archivo"
                     type="file"
                     hidden
@@ -86,11 +86,11 @@
             hidden
             #fileInputMasiva
             (change)="onSubirFacturaMasiva($event, articulo)">
-            <i class="fa fa-folder-open m--font-success" style="cursor: pointer" title="Subir Factura" (click)="fileInput.click()" *ngIf="!articulo.factura_file"></i>
+            <i class="fa fa-folder-open m--font-success" style="cursor: pointer" title="Subir Factura" (click)="fileInput.click()" *ngIf="!articulo.factura_url"></i>
             <span *ngIf="articulo.facturaExcel">{{articulo.facturaExcel.name}}</span>
             <i class="fa fa-file-pdf-o m--font-success" style="cursor: pointer; margin-left: 5px;" title="Declaración de valores" (click)="declaracionValores(declaracion,articulo.id,articulo)"></i>
-            <i class="fa fa-edit m--font-success" style="cursor: pointer" title="Editar Factura" (click)="fileInput.click()" *ngIf="articulo.factura_file"></i>
-            <i class="fa fa-copy m--font-success" style="cursor: pointer" title="Editar Factura Masiva" (click)="fileInputMasiva.click()" *ngIf="articulo.factura_file && articulo.consolidadoFactura "></i>
+            <i class="fa fa-edit m--font-success" style="cursor: pointer" title="Editar Factura" (click)="fileInput.click()" *ngIf="articulo.factura_url"></i>
+            <i class="fa fa-copy m--font-success" style="cursor: pointer" title="Editar Factura Masiva" (click)="fileInputMasiva.click()" *ngIf="articulo.factura_url && articulo.consolidado_factura "></i>
         </td>
         <td>
            
