--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -71,9 +71,18 @@
             (click)="guardarPrecio(articulo.id,articulo.precio)"  *ngIf="!articulo.editarprecio"></i>
         </td>
         <td>
-            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Declaración de Valores" style="color: white; background-color: #4f9e35"  *ngIf="articulo.factura_url && articulo.fac_d_v && !articulo.consolidado_factura">Si</a>            <a class="m-badge m-badge--info m-badge--wide" [attr.href]=" articulo.factura_url" title="Factura" style="color: white; background-color: #1e1111" target="_blank" *ngIf="articulo.factura_url && !articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
-            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Factura Consolidada" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_url && !articulo.fac_d_v && articulo.consolidado_factura">Si</a>            
-            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Factura Consolidada" style="color: white; background-color: #4660d1" *ngIf="articulo.factura_url && articulo.fac_d_v && articulo.consolidado_factura">Si</a>                  <input
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Declaración de Valores" style="color: white; background-color: #4f9e35" target="_blank" *ngIf="articulo.factura_url && articulo.fac_client && articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Factura" style="color: white" target="_blank" *ngIf="articulo.factura_url && articulo.fac_client && !articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url" title="Factura Consolidada" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_url && articulo.fac_client && articulo.consolidado_factura">Si</a>
+
+
+            <a class="m-badge m-badge--success m-badge--wide" title="Declaración de Valores"  [attr.href]="articulo.factura_url" style="color: white; background-color: #4f9e35"
+               target="_blank" *ngIf="articulo.factura_url && !articulo.fac_client && articulo.factura && articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+           <a class="m-badge m-badge--success m-badge--wide" [attr.href]="articulo.factura_url" title="Factura"  style="color: white"
+               target="_blank" *ngIf="articulo.factura_url && !articulo.fac_client && articulo.factura && !articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+               <a class="m-badge m-badge--success m-badge--wide" [attr.href]="articulo.factura_url" title="Consolidado"  style="color: white; background-color: #4660d1"
+               target="_blank" *ngIf="articulo.factura_url && !articulo.fac_client && articulo.factura && articulo.consolidado_factura">Si</a>                 
+            <input
                     name="archivo"
                     type="file"
                     hidden
