--- a/src/app/auth/registro-usuario/registro-usuario.component.html
+++ b/src/app/auth/registro-usuario/registro-usuario.component.html
@@ -126,9 +126,9 @@
                 <div class="m-loader m-loader--primary m-loader--right" *ngIf="!provincias">
                     <input type="text" class="form-control"/>
                 </div>
-                <select *ngIf="provincias" class="form-control m-input" placeholder="Provincia" (change)="getCiudades(provincia_id.value)"
+                <select class="form-control m-input" placeholder="Provincia" (change)="getCiudades(provincia_id.value)"
                 ngModel #provincia_id="ngModel" name="provincia_id" required>
-                    <option *ngFor="let provincia of provincias" [value]="provincia.id" >
+                    <option *ngFor="let provincia of provincias" [value]="provincia.id">
                         {{provincia.nombre}}
                     </option>
                 </select>
