--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -2,7 +2,10 @@
     <thead>
     <tr>
        
-        <th>
+        <th><label class="m-checkbox" style="margin-bottom: 16px !important;">
+            <input type="checkbox" [(ngModel)]="selectedAll" (change)="onSelectAllClick()">
+            <span  style="border: 1px solid #fff !important; background-color: #fff !important;"></span>
+        </label> 
         </th>
         <th>Fecha</th>
         <th>Código Almacén</th>
@@ -47,7 +50,7 @@
         <td>
             <span *ngIf="articulo.media == 0">{{articulo.descripcion}}</span>
             <span class="m-link m-link--info" style="cursor: pointer;" *ngIf="articulo.media > 0" (click)="onVerImagenes(articulo.id)">{{articulo.descripcion}}</span>
-            <span *ngIf="articulo.extranombre">({{articulo.extranombre}} {{articulo.extraapellidos}})</span>
+            <span *ngIf="articulo.extra">({{articulo.extra.nombre}} {{articulo.extra.apellidos}})</span>
         </td>
         <td>
             {{articulo.tienda}}
